# CodePilot

./: Cargo.toml  README.md  test_pycode.py
src/: autocomplete.rs  codepilot.rs  combat.rs  components.rs  events.rs  main.rs  movement.rs  player.rs  post_processing.rs  python_helpers_12.py  python_helpers_5.py  ui.rs
src/enemy/: mod.rs
