[package]
name = "codepilot"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.8.5"
bevy_egui = "0.24.0"
rustpython-vm = "0.3.0"
syntect = "5.0"

[dependencies.bevy]
version = "0.12.1"
features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "vorbis",
    "x11",
    "default_font",
    "webgl2",
]

[dependencies.rustpython]
version = "0.3.0"
default-features = false
features = [
    "threading"
]

[dependencies.egui_extras]
version = "0.24.2"
features = [
    "syntect"
]


[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
